--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -1,5 +1,5 @@
 #hero {
-    background-image: url('assets\images\Section HERO\bg1.png');
+    background-image: url('InterfacesTP4/assets/images/Section HERO/bg1.png');
     height: 959px;
     position: relative;
     overflow: hidden;
