--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 #hero {
     background-image: url("../../images/Section HERO/bg1.png");
+
     height: 959px;
     position: relative;
     overflow: hidden;
@@ -15,6 +18,8 @@
     position: sticky;
     height: 100px;
     width: 1080px; 
+    z-index:3 ;
+    transition: all 0.3s ease;  /* Transición suave para cambios de estilo */
 }
 /*   --------------------------------------------------------------------------------------   */
 
@@ -64,18 +69,16 @@
 
 /*   --------------------------------------------------------------------------------------   */
 /*   -HEADER / LOGO-   */
-#logo-hero {
+/*#logo-hero {} */
 
-}
-
-.logo-hero1 {
-    position: sticky;
+.logo-hero-big {
+    position: absolute;
     height: 320px;
     width: 473px; 
     left: 300px;
 }
 
-.logo-hero2 {
+.logo-hero-small {
     position: absolute;
     top: 6px;
     height: 86px;
@@ -98,11 +101,16 @@
     outline: 8px solid white;
     border-radius: 111px;
     box-shadow: 8px 8px 0px 3px #02187E;
+    align-items: center;
 }
 
 #boton-comprar p{
     font-size: 20px;
     color: white;
+
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: normal;
 }
 /*   --------------------------------------------------------------------------------------   */
 
