modifico loader, agrego animaciones

--- a/assets/css/sections/descubre-el-juego-mas-divertido.css
+++ b/assets/css/sections/descubre-el-juego-mas-divertido.css
@@ -56,3 +56,12 @@
     cursor: pointer;
     font-size: 30px;
   }
+ 
+#seis-numeros {
+    position: relative;
+
+}
+
+#seis-numeros img {
+    transition: transform 0.5s ease-out; /* Movimiento suave */
+}
