--- a/assets/css/sections/descubre-el-juego-mas-divertido.css
+++ b/assets/css/sections/descubre-el-juego-mas-divertido.css
@@ -14,7 +14,8 @@
    
    width: 950px;
    height: 153px;
-   left: 165px;
+   align-items: center;
+   justify-content: center;
     
 }
 #text-container3 p{
@@ -44,7 +45,7 @@
 }
 #seis-numeros .btn {
     position: absolute; /* Posiciona el botón dentro del contenedor */
-    top: 30%; /* Lleva el botón al centro verticalmente */
+    top: 15%; /* Lleva el botón al centro verticalmente */
     left: 50%; /* Lleva el botón al centro horizontalmente */
     transform: translate(-50%, -50%); /* Ajusta para centrar perfectamente */
     padding: 15px 30px;
@@ -59,9 +60,16 @@
  
 #seis-numeros {
     position: relative;
-
-}
-
-#seis-numeros img {
-    transition: transform 0.5s ease-out; /* Movimiento suave */
-}
+    display: inline-block;
+  }
+  
+#game-image {
+    width: 100%;
+    transition: transform 0.1s ease;
+  }
+  
+  #text-container3 {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+  }
