--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -65,11 +65,13 @@
 /* Estilo para el menú abierto */
 #menu-abierto {
     position: absolute;
-    width: 140px;
+    width: 150px;
     height: auto; /* Ajustar según el contenido */
-    top: 20px; /* Alinear verticalmente con el menú cerrado */
+    top: 12px; /* Alinear verticalmente con el menú cerrado */
+    left: 12px;
     background-color: bisque;
-    padding-top: 30px;
+    padding-top: 35px;
+    padding-bottom: 20px;
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -118,7 +120,7 @@
 @keyframes slide-in {
     from {
         opacity: 0;
-        transform: translateY(10px); /* Comienza desde abajo */
+        transform: translateX(-100px); /* Comienza desde la izquierda, viene desde afuera de la pantalla */
     }
     to {
         opacity: 1;
@@ -158,29 +160,43 @@
 
 /*   --------------------------------------------------------------------------------------   */
 /*   -HEADER / BOTON COMPRAR-   */
-#boton-comprar {
+#boton-comprar { 
     position: absolute;
     height: 50px;
     width: 200px; 
     top: 20px;
     right: 100px;
-    background-color: #83C252;
+    background-color: #83C252; /* Color de fondo original */
     display: flex;
     justify-content: center;
     outline: 8px solid white;
     border-radius: 111px;
     box-shadow: 8px 8px 0px 3px #02187E;
     align-items: center;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 #boton-comprar p{
     font-size: 20px;
     color: white;
-
     font-family: "Lato", sans-serif;
     font-weight: 900;
     font-style: normal;
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
 }
+
+#boton-comprar:hover {
+    transform: scale(1.1) rotate(4deg);
+    box-shadow: 12px 12px 0px 5px #02187E;
+    background-color: #c4f5bd; /* Nuevo color al hacer hover */
+}
+
+#boton-comprar:hover p {
+    transform: scale(1.1);
+    color: #02187E;
+}
+
+
 /*   --------------------------------------------------------------------------------------   */
 
 /*   --------------------------------------------------------------------------------------   */
