--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,9 @@
 body{
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    background-color: #1A1A1D;
 }
 
 #container-main{
@@ -9,7 +12,4 @@ body{
     background-color: #FFFFFF;
     overflow: hidden;
 
-    /* BORDE DELIMITADOR TEMPORAL, para poder verlo*/
-    border-style: solid;
-    border-color: red;
 }
