--- a/assets/css/sections/grilla-de-colores.css
+++ b/assets/css/sections/grilla-de-colores.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 700px;
     overflow: hidden; /* Evitar el desbordamiento */
 }
 
@@ -12,7 +12,7 @@
     grid-template-columns: repeat(5, 1fr); /* 5 columnas */
     grid-template-rows: repeat(2, 1fr);    /* 2 filas */
     width: 100vw;                          /* Ocupa todo el ancho de la ventana */
-    height: 100vh;                         /* Ocupa toda la altura de la ventana */
+    height: 700px;                         /* Ocupa toda la altura de la ventana */
     overflow: hidden;                      /* Asegura que nada se desborde */
 }
 
